--- a/GlobalUsingsAnalyzer/GlobalUsingsAnalyzer.CodeFixes/GlobalUsingsAnalyzer.CodeFixes.csproj
+++ b/GlobalUsingsAnalyzer/GlobalUsingsAnalyzer.CodeFixes/GlobalUsingsAnalyzer.CodeFixes.csproj
@@ -4,10 +4,11 @@
     <TargetFramework>netstandard2.0</TargetFramework>
     <IsPackable>false</IsPackable>
     <RootNamespace>GlobalUsingsAnalyzer</RootNamespace>
+	<LangVersion>latest</LangVersion>
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.CodeAnalysis.CSharp.Workspaces" Version="3.3.1" />
+    <PackageReference Include="Microsoft.CodeAnalysis.CSharp.Workspaces" Version="4.4.0" />
   </ItemGroup>
 
   <ItemGroup>
