--- a/GlobalUsingsAnalyzer/GlobalUsingsAnalyzer.Vsix/Properties/launchSettings.json
+++ b/GlobalUsingsAnalyzer/GlobalUsingsAnalyzer.Vsix/Properties/launchSettings.json
@@ -2,7 +2,7 @@
   "profiles": {
     "GlobalUsingsAnalyzer.Vsix": {
       "commandName": "Project",
-      //"commandLineArgs": "C:\\Users\\lukas\\source\\repos\\Other\\EmptyConsoleApp\\EmptyConsoleApp.sln"
+      "commandLineArgs": "C:\\Users\\lukas\\source\\repos\\Other\\EmptyConsoleApp\\EmptyConsoleApp.sln"
     }
   }
 }
